# RealTimeRayTracing

./: .gitignore  CMakeLists.txt  RealTimeRayTracing.sln
RealTimeRayTracing/: CLWrapper.cpp  CLWrapper.h  Cube.cpp  Cube.h  Engine.cpp  Engine.h  GLScreen.cpp  GLScreen.h  MatrixRoutines.h  OpenCLUtil.cpp  OpenCLUtil.h  Pos3.cpp  Pos3.h  RealTimeRayTracing.vcxproj  RealTimeRayTracing.vcxproj.filters  Screen.cpp  Screen.h  clHelp.cpp  clHelp.h  main.cpp
RealTimeRayTracing/CLfiles/: 2Dcoords.cl  helloWorld.cl  makeItRed.cl  raytracer.cl
RealTimeRayTracing/glslfiles/: basic.frag  basic.vert  basicTransformations.frag  basicTransformations.vert  screen.frag  screen.vert
RealTimeRayTracing/shaders/: Shader.cpp  Shader.h
